cmake_minimum_required(VERSION 3.1)
project(volcengine-cpp-sdk-vke)

set(CMAKE_CXX_STANDARD 11)


set(VOLCENGINE_SDK_VKE_HEADER
    include/volcengine/vke/VkeClient.h
)

set(VOLCENGINE_SDK_VKE_HEADER_MODEL
                include/volcengine/vke/model/ApiServerEndpointsForListClustersOutput.h
                include/volcengine/vke/model/ApiServerPublicAccessConfigForCreateClusterInput.h
                include/volcengine/vke/model/ApiServerPublicAccessConfigForListClustersOutput.h
                include/volcengine/vke/model/ApiServerPublicAccessConfigForUpdateClusterConfigInput.h
                include/volcengine/vke/model/AutoScalingForCreateNodePoolInput.h
                include/volcengine/vke/model/AutoScalingForListNodePoolsOutput.h
                include/volcengine/vke/model/AutoScalingForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/ClusterConfigForCreateClusterInput.h
                include/volcengine/vke/model/ClusterConfigForListClustersOutput.h
                include/volcengine/vke/model/ClusterConfigForUpdateClusterConfigInput.h
                include/volcengine/vke/model/CompatibilityForListSupportedAddonsOutput.h
                include/volcengine/vke/model/ConditionForListAddonsOutput.h
                include/volcengine/vke/model/ConditionForListClustersOutput.h
                include/volcengine/vke/model/ConditionForListNodePoolsOutput.h
                include/volcengine/vke/model/ConditionForListNodesOutput.h
                include/volcengine/vke/model/ConvertTagForListNodePoolsOutput.h
                include/volcengine/vke/model/CreateAddonRequest.h
                include/volcengine/vke/model/CreateAddonResult.h
                include/volcengine/vke/model/CreateClusterRequest.h
                include/volcengine/vke/model/CreateClusterResult.h
                include/volcengine/vke/model/CreateDefaultNodePoolRequest.h
                include/volcengine/vke/model/CreateDefaultNodePoolResult.h
                include/volcengine/vke/model/CreateKubeconfigRequest.h
                include/volcengine/vke/model/CreateKubeconfigResult.h
                include/volcengine/vke/model/CreateNodePoolRequest.h
                include/volcengine/vke/model/CreateNodePoolResult.h
                include/volcengine/vke/model/CreateNodesRequest.h
                include/volcengine/vke/model/CreateNodesResult.h
                include/volcengine/vke/model/DataVolumeForCreateNodePoolInput.h
                include/volcengine/vke/model/DataVolumeForListNodePoolsOutput.h
                include/volcengine/vke/model/DataVolumeForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/DeleteAddonRequest.h
                include/volcengine/vke/model/DeleteAddonResult.h
                include/volcengine/vke/model/DeleteClusterRequest.h
                include/volcengine/vke/model/DeleteClusterResult.h
                include/volcengine/vke/model/DeleteKubeconfigsRequest.h
                include/volcengine/vke/model/DeleteKubeconfigsResult.h
                include/volcengine/vke/model/DeleteNodePoolRequest.h
                include/volcengine/vke/model/DeleteNodePoolResult.h
                include/volcengine/vke/model/DeleteNodesRequest.h
                include/volcengine/vke/model/DeleteNodesResult.h
                include/volcengine/vke/model/FilterForListAddonsInput.h
                include/volcengine/vke/model/FilterForListClustersInput.h
                include/volcengine/vke/model/FilterForListKubeconfigsInput.h
                include/volcengine/vke/model/FilterForListNodePoolsInput.h
                include/volcengine/vke/model/FilterForListNodesInput.h
                include/volcengine/vke/model/FilterForListSupportedAddonsInput.h
                include/volcengine/vke/model/FilterForListSupportedResourceTypesInput.h
                include/volcengine/vke/model/FlannelConfigForCreateClusterInput.h
                include/volcengine/vke/model/FlannelConfigForListClustersOutput.h
                include/volcengine/vke/model/ForwardKubernetesApiRequest.h
                include/volcengine/vke/model/ForwardKubernetesApiResult.h
                include/volcengine/vke/model/HeaderForForwardKubernetesApiInput.h
                include/volcengine/vke/model/ItemForListAddonsOutput.h
                include/volcengine/vke/model/ItemForListClustersOutput.h
                include/volcengine/vke/model/ItemForListKubeconfigsOutput.h
                include/volcengine/vke/model/ItemForListNodePoolsOutput.h
                include/volcengine/vke/model/ItemForListNodesOutput.h
                include/volcengine/vke/model/ItemForListSupportedAddonsOutput.h
                include/volcengine/vke/model/ItemForListSupportedResourceTypesOutput.h
                include/volcengine/vke/model/KubernetesConfigForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/KubernetesConfigForCreateNodePoolInput.h
                include/volcengine/vke/model/KubernetesConfigForCreateNodesInput.h
                include/volcengine/vke/model/KubernetesConfigForListNodePoolsOutput.h
                include/volcengine/vke/model/KubernetesConfigForListNodesOutput.h
                include/volcengine/vke/model/KubernetesConfigForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/LabelForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/LabelForCreateNodePoolInput.h
                include/volcengine/vke/model/LabelForCreateNodesInput.h
                include/volcengine/vke/model/LabelForListNodePoolsOutput.h
                include/volcengine/vke/model/LabelForListNodesOutput.h
                include/volcengine/vke/model/LabelForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/ListAddonsRequest.h
                include/volcengine/vke/model/ListAddonsResult.h
                include/volcengine/vke/model/ListClustersRequest.h
                include/volcengine/vke/model/ListClustersResult.h
                include/volcengine/vke/model/ListKubeconfigsRequest.h
                include/volcengine/vke/model/ListKubeconfigsResult.h
                include/volcengine/vke/model/ListNodePoolsRequest.h
                include/volcengine/vke/model/ListNodePoolsResult.h
                include/volcengine/vke/model/ListNodesRequest.h
                include/volcengine/vke/model/ListNodesResult.h
                include/volcengine/vke/model/ListSupportedAddonsRequest.h
                include/volcengine/vke/model/ListSupportedAddonsResult.h
                include/volcengine/vke/model/ListSupportedResourceTypesRequest.h
                include/volcengine/vke/model/ListSupportedResourceTypesResult.h
                include/volcengine/vke/model/ListTagsForResourcesRequest.h
                include/volcengine/vke/model/ListTagsForResourcesResult.h
                include/volcengine/vke/model/LogSetupForCreateClusterInput.h
                include/volcengine/vke/model/LogSetupForListClustersOutput.h
                include/volcengine/vke/model/LogSetupForUpdateClusterConfigInput.h
                include/volcengine/vke/model/LoggingConfigForCreateClusterInput.h
                include/volcengine/vke/model/LoggingConfigForListClustersOutput.h
                include/volcengine/vke/model/LoggingConfigForUpdateClusterConfigInput.h
                include/volcengine/vke/model/LoginForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/LoginForCreateNodePoolInput.h
                include/volcengine/vke/model/LoginForListNodePoolsOutput.h
                include/volcengine/vke/model/LoginForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/NodeConfigForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/NodeConfigForCreateNodePoolInput.h
                include/volcengine/vke/model/NodeConfigForListNodePoolsOutput.h
                include/volcengine/vke/model/NodeConfigForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/NodeStatisticsForListClustersOutput.h
                include/volcengine/vke/model/NodeStatisticsForListNodePoolsOutput.h
                include/volcengine/vke/model/PodsConfigForCreateClusterInput.h
                include/volcengine/vke/model/PodsConfigForListClustersOutput.h
                include/volcengine/vke/model/PodsConfigForUpdateClusterConfigInput.h
                include/volcengine/vke/model/PrivateIpForListClustersOutput.h
                include/volcengine/vke/model/PublicAccessNetworkConfigForCreateClusterInput.h
                include/volcengine/vke/model/PublicAccessNetworkConfigForListClustersOutput.h
                include/volcengine/vke/model/PublicAccessNetworkConfigForUpdateClusterConfigInput.h
                include/volcengine/vke/model/PublicIpForListClustersOutput.h
                include/volcengine/vke/model/ResourceTagForListTagsForResourcesOutput.h
                include/volcengine/vke/model/SecurityForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/SecurityForCreateNodePoolInput.h
                include/volcengine/vke/model/SecurityForListNodePoolsOutput.h
                include/volcengine/vke/model/SecurityForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/ServicesConfigForCreateClusterInput.h
                include/volcengine/vke/model/ServicesConfigForListClustersOutput.h
                include/volcengine/vke/model/StatusForListAddonsInput.h
                include/volcengine/vke/model/StatusForListAddonsOutput.h
                include/volcengine/vke/model/StatusForListClustersInput.h
                include/volcengine/vke/model/StatusForListClustersOutput.h
                include/volcengine/vke/model/StatusForListNodePoolsInput.h
                include/volcengine/vke/model/StatusForListNodePoolsOutput.h
                include/volcengine/vke/model/StatusForListNodesInput.h
                include/volcengine/vke/model/StatusForListNodesOutput.h
                include/volcengine/vke/model/SystemVolumeForCreateNodePoolInput.h
                include/volcengine/vke/model/SystemVolumeForListNodePoolsOutput.h
                include/volcengine/vke/model/SystemVolumeForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/TagFilterForListTagsForResourcesInput.h
                include/volcengine/vke/model/TagForCreateClusterInput.h
                include/volcengine/vke/model/TagForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/TagForCreateNodePoolInput.h
                include/volcengine/vke/model/TagForListClustersInput.h
                include/volcengine/vke/model/TagForListClustersOutput.h
                include/volcengine/vke/model/TagForListNodePoolsInput.h
                include/volcengine/vke/model/TagForListNodePoolsOutput.h
                include/volcengine/vke/model/TagForTagResourcesInput.h
                include/volcengine/vke/model/TagForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/TagResourcesRequest.h
                include/volcengine/vke/model/TagResourcesResult.h
                include/volcengine/vke/model/TaintForCreateDefaultNodePoolInput.h
                include/volcengine/vke/model/TaintForCreateNodePoolInput.h
                include/volcengine/vke/model/TaintForCreateNodesInput.h
                include/volcengine/vke/model/TaintForListNodePoolsOutput.h
                include/volcengine/vke/model/TaintForListNodesOutput.h
                include/volcengine/vke/model/TaintForUpdateNodePoolConfigInput.h
                include/volcengine/vke/model/UntagResourcesRequest.h
                include/volcengine/vke/model/UntagResourcesResult.h
                include/volcengine/vke/model/UpdateAddonConfigRequest.h
                include/volcengine/vke/model/UpdateAddonConfigResult.h
                include/volcengine/vke/model/UpdateAddonVersionRequest.h
                include/volcengine/vke/model/UpdateAddonVersionResult.h
                include/volcengine/vke/model/UpdateClusterConfigRequest.h
                include/volcengine/vke/model/UpdateClusterConfigResult.h
                include/volcengine/vke/model/UpdateNodePoolConfigRequest.h
                include/volcengine/vke/model/UpdateNodePoolConfigResult.h
                include/volcengine/vke/model/VersionForListSupportedAddonsOutput.h
                include/volcengine/vke/model/VpcCniConfigForCreateClusterInput.h
                include/volcengine/vke/model/VpcCniConfigForListClustersOutput.h
                include/volcengine/vke/model/VpcCniConfigForUpdateClusterConfigInput.h
    )

set(VOLCENGINE_SDK_VKE_LIB
    src/VkeClient.cpp
    src/model/vke/ApiServerEndpointsForListClustersOutput.cpp
    src/model/vke/ApiServerPublicAccessConfigForCreateClusterInput.cpp
    src/model/vke/ApiServerPublicAccessConfigForListClustersOutput.cpp
    src/model/vke/ApiServerPublicAccessConfigForUpdateClusterConfigInput.cpp
    src/model/vke/AutoScalingForCreateNodePoolInput.cpp
    src/model/vke/AutoScalingForListNodePoolsOutput.cpp
    src/model/vke/AutoScalingForUpdateNodePoolConfigInput.cpp
    src/model/vke/ClusterConfigForCreateClusterInput.cpp
    src/model/vke/ClusterConfigForListClustersOutput.cpp
    src/model/vke/ClusterConfigForUpdateClusterConfigInput.cpp
    src/model/vke/CompatibilityForListSupportedAddonsOutput.cpp
    src/model/vke/ConditionForListAddonsOutput.cpp
    src/model/vke/ConditionForListClustersOutput.cpp
    src/model/vke/ConditionForListNodePoolsOutput.cpp
    src/model/vke/ConditionForListNodesOutput.cpp
    src/model/vke/ConvertTagForListNodePoolsOutput.cpp
    src/model/vke/CreateAddonRequest.cpp
    src/model/vke/CreateAddonResult.cpp
    src/model/vke/CreateClusterRequest.cpp
    src/model/vke/CreateClusterResult.cpp
    src/model/vke/CreateDefaultNodePoolRequest.cpp
    src/model/vke/CreateDefaultNodePoolResult.cpp
    src/model/vke/CreateKubeconfigRequest.cpp
    src/model/vke/CreateKubeconfigResult.cpp
    src/model/vke/CreateNodePoolRequest.cpp
    src/model/vke/CreateNodePoolResult.cpp
    src/model/vke/CreateNodesRequest.cpp
    src/model/vke/CreateNodesResult.cpp
    src/model/vke/DataVolumeForCreateNodePoolInput.cpp
    src/model/vke/DataVolumeForListNodePoolsOutput.cpp
    src/model/vke/DataVolumeForUpdateNodePoolConfigInput.cpp
    src/model/vke/DeleteAddonRequest.cpp
    src/model/vke/DeleteAddonResult.cpp
    src/model/vke/DeleteClusterRequest.cpp
    src/model/vke/DeleteClusterResult.cpp
    src/model/vke/DeleteKubeconfigsRequest.cpp
    src/model/vke/DeleteKubeconfigsResult.cpp
    src/model/vke/DeleteNodePoolRequest.cpp
    src/model/vke/DeleteNodePoolResult.cpp
    src/model/vke/DeleteNodesRequest.cpp
    src/model/vke/DeleteNodesResult.cpp
    src/model/vke/FilterForListAddonsInput.cpp
    src/model/vke/FilterForListClustersInput.cpp
    src/model/vke/FilterForListKubeconfigsInput.cpp
    src/model/vke/FilterForListNodePoolsInput.cpp
    src/model/vke/FilterForListNodesInput.cpp
    src/model/vke/FilterForListSupportedAddonsInput.cpp
    src/model/vke/FilterForListSupportedResourceTypesInput.cpp
    src/model/vke/FlannelConfigForCreateClusterInput.cpp
    src/model/vke/FlannelConfigForListClustersOutput.cpp
    src/model/vke/ForwardKubernetesApiRequest.cpp
    src/model/vke/ForwardKubernetesApiResult.cpp
    src/model/vke/HeaderForForwardKubernetesApiInput.cpp
    src/model/vke/ItemForListAddonsOutput.cpp
    src/model/vke/ItemForListClustersOutput.cpp
    src/model/vke/ItemForListKubeconfigsOutput.cpp
    src/model/vke/ItemForListNodePoolsOutput.cpp
    src/model/vke/ItemForListNodesOutput.cpp
    src/model/vke/ItemForListSupportedAddonsOutput.cpp
    src/model/vke/ItemForListSupportedResourceTypesOutput.cpp
    src/model/vke/KubernetesConfigForCreateDefaultNodePoolInput.cpp
    src/model/vke/KubernetesConfigForCreateNodePoolInput.cpp
    src/model/vke/KubernetesConfigForCreateNodesInput.cpp
    src/model/vke/KubernetesConfigForListNodePoolsOutput.cpp
    src/model/vke/KubernetesConfigForListNodesOutput.cpp
    src/model/vke/KubernetesConfigForUpdateNodePoolConfigInput.cpp
    src/model/vke/LabelForCreateDefaultNodePoolInput.cpp
    src/model/vke/LabelForCreateNodePoolInput.cpp
    src/model/vke/LabelForCreateNodesInput.cpp
    src/model/vke/LabelForListNodePoolsOutput.cpp
    src/model/vke/LabelForListNodesOutput.cpp
    src/model/vke/LabelForUpdateNodePoolConfigInput.cpp
    src/model/vke/ListAddonsRequest.cpp
    src/model/vke/ListAddonsResult.cpp
    src/model/vke/ListClustersRequest.cpp
    src/model/vke/ListClustersResult.cpp
    src/model/vke/ListKubeconfigsRequest.cpp
    src/model/vke/ListKubeconfigsResult.cpp
    src/model/vke/ListNodePoolsRequest.cpp
    src/model/vke/ListNodePoolsResult.cpp
    src/model/vke/ListNodesRequest.cpp
    src/model/vke/ListNodesResult.cpp
    src/model/vke/ListSupportedAddonsRequest.cpp
    src/model/vke/ListSupportedAddonsResult.cpp
    src/model/vke/ListSupportedResourceTypesRequest.cpp
    src/model/vke/ListSupportedResourceTypesResult.cpp
    src/model/vke/ListTagsForResourcesRequest.cpp
    src/model/vke/ListTagsForResourcesResult.cpp
    src/model/vke/LogSetupForCreateClusterInput.cpp
    src/model/vke/LogSetupForListClustersOutput.cpp
    src/model/vke/LogSetupForUpdateClusterConfigInput.cpp
    src/model/vke/LoggingConfigForCreateClusterInput.cpp
    src/model/vke/LoggingConfigForListClustersOutput.cpp
    src/model/vke/LoggingConfigForUpdateClusterConfigInput.cpp
    src/model/vke/LoginForCreateDefaultNodePoolInput.cpp
    src/model/vke/LoginForCreateNodePoolInput.cpp
    src/model/vke/LoginForListNodePoolsOutput.cpp
    src/model/vke/LoginForUpdateNodePoolConfigInput.cpp
    src/model/vke/NodeConfigForCreateDefaultNodePoolInput.cpp
    src/model/vke/NodeConfigForCreateNodePoolInput.cpp
    src/model/vke/NodeConfigForListNodePoolsOutput.cpp
    src/model/vke/NodeConfigForUpdateNodePoolConfigInput.cpp
    src/model/vke/NodeStatisticsForListClustersOutput.cpp
    src/model/vke/NodeStatisticsForListNodePoolsOutput.cpp
    src/model/vke/PodsConfigForCreateClusterInput.cpp
    src/model/vke/PodsConfigForListClustersOutput.cpp
    src/model/vke/PodsConfigForUpdateClusterConfigInput.cpp
    src/model/vke/PrivateIpForListClustersOutput.cpp
    src/model/vke/PublicAccessNetworkConfigForCreateClusterInput.cpp
    src/model/vke/PublicAccessNetworkConfigForListClustersOutput.cpp
    src/model/vke/PublicAccessNetworkConfigForUpdateClusterConfigInput.cpp
    src/model/vke/PublicIpForListClustersOutput.cpp
    src/model/vke/ResourceTagForListTagsForResourcesOutput.cpp
    src/model/vke/SecurityForCreateDefaultNodePoolInput.cpp
    src/model/vke/SecurityForCreateNodePoolInput.cpp
    src/model/vke/SecurityForListNodePoolsOutput.cpp
    src/model/vke/SecurityForUpdateNodePoolConfigInput.cpp
    src/model/vke/ServicesConfigForCreateClusterInput.cpp
    src/model/vke/ServicesConfigForListClustersOutput.cpp
    src/model/vke/StatusForListAddonsInput.cpp
    src/model/vke/StatusForListAddonsOutput.cpp
    src/model/vke/StatusForListClustersInput.cpp
    src/model/vke/StatusForListClustersOutput.cpp
    src/model/vke/StatusForListNodePoolsInput.cpp
    src/model/vke/StatusForListNodePoolsOutput.cpp
    src/model/vke/StatusForListNodesInput.cpp
    src/model/vke/StatusForListNodesOutput.cpp
    src/model/vke/SystemVolumeForCreateNodePoolInput.cpp
    src/model/vke/SystemVolumeForListNodePoolsOutput.cpp
    src/model/vke/SystemVolumeForUpdateNodePoolConfigInput.cpp
    src/model/vke/TagFilterForListTagsForResourcesInput.cpp
    src/model/vke/TagForCreateClusterInput.cpp
    src/model/vke/TagForCreateDefaultNodePoolInput.cpp
    src/model/vke/TagForCreateNodePoolInput.cpp
    src/model/vke/TagForListClustersInput.cpp
    src/model/vke/TagForListClustersOutput.cpp
    src/model/vke/TagForListNodePoolsInput.cpp
    src/model/vke/TagForListNodePoolsOutput.cpp
    src/model/vke/TagForTagResourcesInput.cpp
    src/model/vke/TagForUpdateNodePoolConfigInput.cpp
    src/model/vke/TagResourcesRequest.cpp
    src/model/vke/TagResourcesResult.cpp
    src/model/vke/TaintForCreateDefaultNodePoolInput.cpp
    src/model/vke/TaintForCreateNodePoolInput.cpp
    src/model/vke/TaintForCreateNodesInput.cpp
    src/model/vke/TaintForListNodePoolsOutput.cpp
    src/model/vke/TaintForListNodesOutput.cpp
    src/model/vke/TaintForUpdateNodePoolConfigInput.cpp
    src/model/vke/UntagResourcesRequest.cpp
    src/model/vke/UntagResourcesResult.cpp
    src/model/vke/UpdateAddonConfigRequest.cpp
    src/model/vke/UpdateAddonConfigResult.cpp
    src/model/vke/UpdateAddonVersionRequest.cpp
    src/model/vke/UpdateAddonVersionResult.cpp
    src/model/vke/UpdateClusterConfigRequest.cpp
    src/model/vke/UpdateClusterConfigResult.cpp
    src/model/vke/UpdateNodePoolConfigRequest.cpp
    src/model/vke/UpdateNodePoolConfigResult.cpp
    src/model/vke/VersionForListSupportedAddonsOutput.cpp
    src/model/vke/VpcCniConfigForCreateClusterInput.cpp
    src/model/vke/VpcCniConfigForListClustersOutput.cpp
    src/model/vke/VpcCniConfigForUpdateClusterConfigInput.cpp
)

add_library(${PROJECT_NAME}
     STATIC ${VOLCENGINE_SDK_VKE_LIB}
     ${VOLCENGINE_SDK_VKE_HEADER}
     ${VOLCENGINE_SDK_VKE_HEADER_MODEL}
     )

set_target_properties(${PROJECT_NAME}
     PROPERTIES
     LINKER_LANGUAGE CXX
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
     OUTPUT_NAME ${PROJECT_NAME}
)

target_include_directories(${PROJECT_NAME}
     PRIVATE include
     ${CMAKE_SOURCE_DIR}/${TARGET_OUTPUT_NAME_PREFIX}core/include)

target_link_libraries(${PROJECT_NAME} ${TARGET_OUTPUT_NAME_PREFIX}core)

target_link_libraries(${PROJECT_NAME} ${CLIENT_SSL_LIBS})
target_link_libraries(${PROJECT_NAME} ${CLIENT_CURL_LIBS})


install(FILES ${VOLCENGINE_SDK_VKE_HEADER}
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/volcengine/vke)
install(FILES  ${VOLCENGINE_SDK_VKE_HEADER_MODEL}
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/volcengine/vke/model)
install(TARGETS ${PROJECT_NAME}
       ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
       LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
       RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)